grammar/output/SmallCParser.py
# Generated from SmallC.g4 by ANTLR 4.6
# encoding: utf-8
from antlr4 import *
from io import StringIO



class SmallCParser ( Parser ):

    grammarFileName = "SmallC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "','", "'{'", "'}'", "'='", 
                     "'if'", "'else'", "'while'", "'break'", "';'", "'continue'", 
                     "'return'", "'void'", "'char'", "'int'", "'float'", 
                     "'const'", "'['", "']'", "'*'", "'?'", "':'", "'||'", 
                     "'&&'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", 
                     "'+'", "'-'", "'/'", "'%'", "'++'", "'--'", "'&'", 
                     "'!'", "'.'", "'->'", "'*='", "'/='", "'%='", "'+='", 
                     "'-='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "Whitespace", 
                      "Newline", "LineComment", "FloatingConstant", "IntegerConstant", 
                      "CharacterConstant", "StringConstant", "EscapeSequence", 
                      "Identifier" ]

    RULE_program = 0
    RULE_externalDeclaration = 1
    RULE_functionDefinition = 2
    RULE_parameterDeclarationList = 3
    RULE_parameterDeclaration = 4
    RULE_compoundStatement = 5
    RULE_variableDeclaration = 6
    RULE_variableInitList = 7
    RULE_variableInit = 8
    RULE_statement = 9
    RULE_condStatement = 10
    RULE_whileStatement = 11
    RULE_breakStatement = 12
    RULE_continueStatement = 13
    RULE_returnStatement = 14
    RULE_exprStatement = 15
    RULE_typeSpecifier = 16
    RULE_typeQualifier = 17
    RULE_declaration = 18
    RULE_declarationSpecifiers = 19
    RULE_initDeclaratorList = 20
    RULE_initDeclarator = 21
    RULE_declarator = 22
    RULE_directDeclarator = 23
    RULE_pointer = 24
    RULE_expression = 25
    RULE_assignment = 26
    RULE_condition = 27
    RULE_disjunction = 28
    RULE_conjunction = 29
    RULE_comparison = 30
    RULE_relation = 31
    RULE_plus = 32
    RULE_times = 33
    RULE_cast = 34
    RULE_unary = 35
    RULE_postfix = 36
    RULE_primary = 37
    RULE_constant = 38
    RULE_assignmentOperator = 39
    RULE_expressionList = 40

    ruleNames =  [ "program", "externalDeclaration", "functionDefinition", 
                   "parameterDeclarationList", "parameterDeclaration", "compoundStatement", 
                   "variableDeclaration", "variableInitList", "variableInit", 
                   "statement", "condStatement", "whileStatement", "breakStatement", 
                   "continueStatement", "returnStatement", "exprStatement", 
                   "typeSpecifier", "typeQualifier", "declaration", "declarationSpecifiers", 
                   "initDeclaratorList", "initDeclarator", "declarator", 
                   "directDeclarator", "pointer", "expression", "assignment", 
                   "condition", "disjunction", "conjunction", "comparison", 
                   "relation", "plus", "times", "cast", "unary", "postfix", 
                   "primary", "constant", "assignmentOperator", "expressionList" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    Whitespace=47
    Newline=48
    LineComment=49
    FloatingConstant=50
    IntegerConstant=51
    CharacterConstant=52
    StringConstant=53
    EscapeSequence=54
    Identifier=55

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.6")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def externalDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SmallCParser.ExternalDeclarationContext)
            else:
                return self.getTypedRuleContext(SmallCParser.ExternalDeclarationContext,i)


        def getRuleIndex(self):
            return SmallCParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = SmallCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SmallCParser.T__13) | (1 << SmallCParser.T__14) | (1 << SmallCParser.T__15) | (1 << SmallCParser.T__16) | (1 << SmallCParser.T__17))) != 0):
                self.state = 82
                self.externalDeclaration()
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExternalDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionDefinition(self):
            return self.getTypedRuleContext(SmallCParser.FunctionDefinitionContext,0)


        def declaration(self):
            return self.getTypedRuleContext(SmallCParser.DeclarationContext,0)


        def getRuleIndex(self):
            return SmallCParser.RULE_externalDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExternalDeclaration" ):
                listener.enterExternalDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExternalDeclaration" ):
                listener.exitExternalDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExternalDeclaration" ):
                return visitor.visitExternalDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def externalDeclaration(self):

        localctx = SmallCParser.ExternalDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_externalDeclaration)
        try:
            self.state = 90
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 88
                self.functionDefinition()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 89
                self.declaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionDefinitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeSpecifier(self):
            return self.getTypedRuleContext(SmallCParser.TypeSpecifierContext,0)


        def Identifier(self):
            return self.getToken(SmallCParser.Identifier, 0)

        def parameterDeclarationList(self):
            return self.getTypedRuleContext(SmallCParser.ParameterDeclarationListContext,0)


        def compoundStatement(self):
            return self.getTypedRuleContext(SmallCParser.CompoundStatementContext,0)


        def getRuleIndex(self):
            return SmallCParser.RULE_functionDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDefinition" ):
                listener.enterFunctionDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDefinition" ):
                listener.exitFunctionDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDefinition" ):
                return visitor.visitFunctionDefinition(self)
            else:
                return visitor.visitChildren(self)




    def functionDefinition(self):

        localctx = SmallCParser.FunctionDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_functionDefinition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.typeSpecifier()
            self.state = 93
            self.match(SmallCParser.Identifier)
            self.state = 94
            self.match(SmallCParser.T__0)
            self.state = 95
            self.parameterDeclarationList()
            self.state = 96
            self.match(SmallCParser.T__1)
            self.state = 97
            self.compoundStatement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParameterDeclarationListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameterDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SmallCParser.ParameterDeclarationContext)
            else:
                return self.getTypedRuleContext(SmallCParser.ParameterDeclarationContext,i)


        def getRuleIndex(self):
            return SmallCParser.RULE_parameterDeclarationList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterDeclarationList" ):
                listener.enterParameterDeclarationList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterDeclarationList" ):
                listener.exitParameterDeclarationList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterDeclarationList" ):
                return visitor.visitParameterDeclarationList(self)
            else:
                return visitor.visitChildren(self)




    def parameterDeclarationList(self):

        localctx = SmallCParser.ParameterDeclarationListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_parameterDeclarationList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.parameterDeclaration()
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SmallCParser.T__2:
                self.state = 100
                self.match(SmallCParser.T__2)
                self.state = 101
                self.parameterDeclaration()
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParameterDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeSpecifier(self):
            return self.getTypedRuleContext(SmallCParser.TypeSpecifierContext,0)


        def Identifier(self):
            return self.getToken(SmallCParser.Identifier, 0)

        def getRuleIndex(self):
            return SmallCParser.RULE_parameterDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterDeclaration" ):
                listener.enterParameterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterDeclaration" ):
                listener.exitParameterDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterDeclaration" ):
                return visitor.visitParameterDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def parameterDeclaration(self):

        localctx = SmallCParser.ParameterDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_parameterDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.typeSpecifier()
            self.state = 108
            self.match(SmallCParser.Identifier)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CompoundStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SmallCParser.VariableDeclarationContext)
            else:
                return self.getTypedRuleContext(SmallCParser.VariableDeclarationContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SmallCParser.StatementContext)
            else:
                return self.getTypedRuleContext(SmallCParser.StatementContext,i)


        def getRuleIndex(self):
            return SmallCParser.RULE_compoundStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompoundStatement" ):
                listener.enterCompoundStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompoundStatement" ):
                listener.exitCompoundStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompoundStatement" ):
                return visitor.visitCompoundStatement(self)
            else:
                return visitor.visitChildren(self)




    def compoundStatement(self):

        localctx = SmallCParser.CompoundStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_compoundStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(SmallCParser.T__3)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SmallCParser.T__0) | (1 << SmallCParser.T__3) | (1 << SmallCParser.T__6) | (1 << SmallCParser.T__8) | (1 << SmallCParser.T__9) | (1 << SmallCParser.T__10) | (1 << SmallCParser.T__11) | (1 << SmallCParser.T__12) | (1 << SmallCParser.T__13) | (1 << SmallCParser.T__14) | (1 << SmallCParser.T__15) | (1 << SmallCParser.T__16) | (1 << SmallCParser.T__20) | (1 << SmallCParser.T__31) | (1 << SmallCParser.T__32) | (1 << SmallCParser.T__35) | (1 << SmallCParser.T__36) | (1 << SmallCParser.T__37) | (1 << SmallCParser.T__38) | (1 << SmallCParser.FloatingConstant) | (1 << SmallCParser.IntegerConstant) | (1 << SmallCParser.CharacterConstant) | (1 << SmallCParser.StringConstant) | (1 << SmallCParser.Identifier))) != 0):
                self.state = 113
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [SmallCParser.T__13, SmallCParser.T__14, SmallCParser.T__15, SmallCParser.T__16]:
                    self.state = 111
                    self.variableDeclaration()
                    pass
                elif token in [SmallCParser.T__0, SmallCParser.T__3, SmallCParser.T__6, SmallCParser.T__8, SmallCParser.T__9, SmallCParser.T__10, SmallCParser.T__11, SmallCParser.T__12, SmallCParser.T__20, SmallCParser.T__31, SmallCParser.T__32, SmallCParser.T__35, SmallCParser.T__36, SmallCParser.T__37, SmallCParser.T__38, SmallCParser.FloatingConstant, SmallCParser.IntegerConstant, SmallCParser.CharacterConstant, SmallCParser.StringConstant, SmallCParser.Identifier]:
                    self.state = 112
                    self.statement()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 118
            self.match(SmallCParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeSpecifier(self):
            return self.getTypedRuleContext(SmallCParser.TypeSpecifierContext,0)


        def variableInitList(self):
            return self.getTypedRuleContext(SmallCParser.VariableInitListContext,0)


        def getRuleIndex(self):
            return SmallCParser.RULE_variableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclaration" ):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclaration" ):
                listener.exitVariableDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDeclaration" ):
                return visitor.visitVariableDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def variableDeclaration(self):

        localctx = SmallCParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_variableDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.typeSpecifier()
            self.state = 121
            self.variableInitList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableInitListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableInit(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SmallCParser.VariableInitContext)
            else:
                return self.getTypedRuleContext(SmallCParser.VariableInitContext,i)


        def getRuleIndex(self):
            return SmallCParser.RULE_variableInitList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableInitList" ):
                listener.enterVariableInitList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableInitList" ):
                listener.exitVariableInitList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableInitList" ):
                return visitor.visitVariableInitList(self)
            else:
                return visitor.visitChildren(self)




    def variableInitList(self):

        localctx = SmallCParser.VariableInitListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_variableInitList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.variableInit()
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SmallCParser.T__2:
                self.state = 124
                self.match(SmallCParser.T__2)
                self.state = 125
                self.variableInit()
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableInitContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(SmallCParser.Identifier, 0)

        def assignment(self):
            return self.getTypedRuleContext(SmallCParser.AssignmentContext,0)


        def getRuleIndex(self):
            return SmallCParser.RULE_variableInit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableInit" ):
                listener.enterVariableInit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableInit" ):
                listener.exitVariableInit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableInit" ):
                return visitor.visitVariableInit(self)
            else:
                return visitor.visitChildren(self)




    def variableInit(self):

        localctx = SmallCParser.VariableInitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_variableInit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(SmallCParser.Identifier)
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SmallCParser.T__5:
                self.state = 132
                self.match(SmallCParser.T__5)
                self.state = 133
                self.assignment()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def compoundStatement(self):
            return self.getTypedRuleContext(SmallCParser.CompoundStatementContext,0)


        def condStatement(self):
            return self.getTypedRuleContext(SmallCParser.CondStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(SmallCParser.WhileStatementContext,0)


        def breakStatement(self):
            return self.getTypedRuleContext(SmallCParser.BreakStatementContext,0)


        def continueStatement(self):
            return self.getTypedRuleContext(SmallCParser.ContinueStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(SmallCParser.ReturnStatementContext,0)


        def exprStatement(self):
            return self.getTypedRuleContext(SmallCParser.ExprStatementContext,0)


        def getRuleIndex(self):
            return SmallCParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = SmallCParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_statement)
        try:
            self.state = 143
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SmallCParser.T__3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.compoundStatement()
                pass
            elif token in [SmallCParser.T__6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 137
                self.condStatement()
                pass
            elif token in [SmallCParser.T__8]:
                self.enterOuterAlt(localctx, 3)
                self.state = 138
                self.whileStatement()
                pass
            elif token in [SmallCParser.T__9]:
                self.enterOuterAlt(localctx, 4)
                self.state = 139
                self.breakStatement()
                pass
            elif token in [SmallCParser.T__11]:
                self.enterOuterAlt(localctx, 5)
                self.state = 140
                self.continueStatement()
                pass
            elif token in [SmallCParser.T__12]:
                self.enterOuterAlt(localctx, 6)
                self.state = 141
                self.returnStatement()
                pass
            elif token in [SmallCParser.T__0, SmallCParser.T__10, SmallCParser.T__20, SmallCParser.T__31, SmallCParser.T__32, SmallCParser.T__35, SmallCParser.T__36, SmallCParser.T__37, SmallCParser.T__38, SmallCParser.FloatingConstant, SmallCParser.IntegerConstant, SmallCParser.CharacterConstant, SmallCParser.StringConstant, SmallCParser.Identifier]:
                self.enterOuterAlt(localctx, 7)
                self.state = 142
                self.exprStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CondStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(SmallCParser.ExpressionContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SmallCParser.StatementContext)
            else:
                return self.getTypedRuleContext(SmallCParser.StatementContext,i)


        def getRuleIndex(self):
            return SmallCParser.RULE_condStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondStatement" ):
                listener.enterCondStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondStatement" ):
                listener.exitCondStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondStatement" ):
                return visitor.visitCondStatement(self)
            else:
                return visitor.visitChildren(self)




    def condStatement(self):

        localctx = SmallCParser.CondStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_condStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(SmallCParser.T__6)
            self.state = 146
            self.match(SmallCParser.T__0)
            self.state = 147
            self.expression(0)
            self.state = 148
            self.match(SmallCParser.T__1)
            self.state = 149
            self.statement()
            self.state = 152
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 150
                self.match(SmallCParser.T__7)
                self.state = 151
                self.statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WhileStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(SmallCParser.ExpressionContext,0)


        def statement(self):
            return self.getTypedRuleContext(SmallCParser.StatementContext,0)


        def getRuleIndex(self):
            return SmallCParser.RULE_whileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStatement" ):
                return visitor.visitWhileStatement(self)
            else:
                return visitor.visitChildren(self)




    def whileStatement(self):

        localctx = SmallCParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_whileStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(SmallCParser.T__8)
            self.state = 155
            self.match(SmallCParser.T__0)
            self.state = 156
            self.expression(0)
            self.state = 157
            self.match(SmallCParser.T__1)
            self.state = 158
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BreakStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SmallCParser.RULE_breakStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBreakStatement" ):
                listener.enterBreakStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBreakStatement" ):
                listener.exitBreakStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBreakStatement" ):
                return visitor.visitBreakStatement(self)
            else:
                return visitor.visitChildren(self)




    def breakStatement(self):

        localctx = SmallCParser.BreakStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_breakStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(SmallCParser.T__9)
            self.state = 161
            self.match(SmallCParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ContinueStatementContext(ParserRuleContext):
